ajout de landmarks sur la page d'un ride, amélioration de la configuration, nettoyage code, modification du fichier readme

--- a/templates/full/home_page.html.twig
+++ b/templates/full/home_page.html.twig
@@ -13,6 +13,7 @@
             </thead>
             <tbody>
             {% for ride in rides.currentPageResults %}
+                {# appelle le contrôleur ibexa_content et sa méthode viewAction avec les paramètres location et viewType #}
                 {{ render( controller( 'ibexa_content::viewAction', { 'location': ride.valueObject, 'viewType': 'line' } )) }}
             {% endfor %}
             </tbody>
