--- a/templates/full/ride.html.twig
+++ b/templates/full/ride.html.twig
@@ -13,6 +13,7 @@
             <div class="row">
                 <div class="col-xs-6">
                     <h4 class="underscore">{{ 'Starting point'|trans }}</h4>
+                    {# ibexa_render_field permet d'afficher le field starting_point selon des paramètres #}
                     {{ ibexa_render_field(content, 'starting_point', {'parameters': { 'width': '100%', height: '200px', 'showMap': true, 'showInfo': false }}) }}
                 </div>
                 <div class="col-xs-6">
@@ -37,5 +38,18 @@
             </div>
         </div>
     </section>
+
+    {% if landmarksList is not empty %}
+        <div class="row regular-content-size">
+            <section class="photos">
+                <div class="col-xs-12">
+                    <h4 class="underscore">{{ 'Landmarks'|trans }}</h4>
+                </div>
+                {% for landmark in landmarksList %}
+                    {{ render( controller( "ibexa_content::viewAction", { 'content': landmark, 'viewType': 'line'} )) }}
+                {% endfor %}
+            </section>
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
